--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -227,12 +227,11 @@ pre {
 }
 hr {
     background: none;
-    border-width: 0;
-    border-top-width: 1px;
+    border-width: 1px 0 0 0 !important;
     border-style: solid;
     clear: both;
     height: 0;
-    margin: @margin 0;
+    margin: @space 0;
     width: 100%;
     &.atk-hr-dotted {
         border-top-style: dotted;
