--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -845,7 +845,7 @@ ul[class*=atk-menu] {
 [data-border] {
     border-style: solid;
     border-width: 0px;
-    &:not(hr), &:not([data-border*=left]):not([data-border*=right]):not([data-border*=top]):not([data-border*=bottom]) {
+    &:not([data-border*=left]):not([data-border*=right]):not([data-border*=top]):not([data-border*=bottom]):not(hr) {
       border-width: 1px;
     }
 }
