Fixed icon problem.

--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -96,7 +96,10 @@ a {
       }
   }
 }
-*[class*=icon]:before {
-  margin-left: 0;
-  margin-right: 0; 
+*[class*=icon] {
+  line-height: 1;
+  &:before {
+    margin-left: 0;
+    margin-right: 0; 
+  }
 }
