--- a/playground/css/playground-theme.css
+++ b/playground/css/playground-theme.css
@@ -3003,17 +3003,22 @@ input[class*=atk-button]:not([data-padding]) {
 .ui-button:not([data-padding]) {
   padding: 0.5em 1em;
 }
-[class*=atk-button]:not([data-padding]).atk-button-xsmall {
-  padding: 0.12em 0.25em;
-}
-[class*=atk-button]:not([data-padding]).atk-button-small {
+[class*=atk-button]:not([data-padding])[data-button*=spacing-s] {
   padding: 0.25em 0.5em;
 }
-[class*=atk-button]:not([data-padding]).atk-button-large {
+[class*=atk-button]:not([data-padding])[data-button*=spacing-xs] {
+  padding: 0.12em 0.25em;
+}
+[class*=atk-button]:not([data-padding])[data-button*=spacing-l] {
   padding: 0.75em 1.5em;
 }
-[class*=atk-button]:not([data-padding]).atk-button-xlarge {
+[class*=atk-button]:not([data-padding])[data-button*=spacing-xl] {
   padding: 1em 2em;
+}
+[class*=atk-button][data-button*=blank] {
+  background: none !important;
+  border-color: transparent !important;
+  box-shadow: none !important;
 }
 .atk-buttonset > [class*=atk-button] {
   -webkit-border-radius: 0;
@@ -3038,11 +3043,6 @@ input[class*=atk-button]:not([data-padding]) {
 }
 .atk-buttonset > [class*=atk-button] + * {
   border-left: none;
-}
-.atk-button-blank {
-  background: none !important;
-  border-color: transparent !important;
-  box-shadow: none !important;
 }
 ul[class*=atk-menu] {
   list-style-type: none;
@@ -3817,6 +3817,9 @@ hr[data-border*=thick] {
   background-color: #f5f5f5;
   border-color: #c2c2c2;
 }
+.atk-button[data-button*=blank] {
+  color: #fff !important;
+}
 [data-border*=outline],
 [data-border*=outline][class*=atk-button] {
   background-color: transparent;
@@ -3954,6 +3957,12 @@ body hr[data-border*=overlay],
 [class*=atk-swatch]:not([class*=atk-swatch-default]) [class*=atk-swatch-default] hr[data-border*=overlay] {
   border-color: #bfbfbf;
 }
+body .atk-table[data-table*=hover] table tbody tr:hover td,
+.atk-swatch-default .atk-table[data-table*=hover] table tbody tr:hover td,
+[class*=atk-swatch]:not([class*=atk-swatch-default]) [class*=atk-box]:not([class*=atk-swatch]) .atk-table[data-table*=hover] table tbody tr:hover td,
+[class*=atk-swatch]:not([class*=atk-swatch-default]) [class*=atk-swatch-default] .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #fafafa;
+}
 .atk-swatch-default {
   background-color: #fff;
 }
@@ -3977,6 +3986,9 @@ body hr[data-border*=overlay],
 .atk-swatch-ink .ui-widget-content .ui-state-default:hover {
   background-color: #151e26;
   border-color: #000000;
+}
+.atk-swatch-ink.atk-button[data-button*=blank] {
+  color: #1c2933 !important;
 }
 .atk-swatch-ink[data-border*=outline],
 .atk-swatch-ink[data-border*=outline][class*=atk-button] {
@@ -4040,6 +4052,9 @@ a.atk-swatch-ink:not([class*=atk-button]):hover {
 .atk-swatch-ink hr[data-border*=overlay] {
   border-color: #010102;
 }
+.atk-swatch-ink .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #18242c;
+}
 .atk-swatch-ink[class*=icon] {
   background: none;
   color: #1c2933;
@@ -4077,6 +4092,9 @@ a.atk-swatch-ink-text:hover {
 .atk-swatch-gray .ui-widget-content .ui-state-default:hover {
   background-color: #eaecee;
   border-color: #c8cdd3;
+}
+.atk-swatch-gray.atk-button[data-button*=blank] {
+  color: #f5f6f7 !important;
 }
 .atk-swatch-gray[data-border*=outline],
 .atk-swatch-gray[data-border*=outline][class*=atk-button] {
@@ -4140,6 +4158,9 @@ a.atk-swatch-gray:not([class*=atk-button]):hover {
 .atk-swatch-gray hr[data-border*=overlay] {
   border-color: #cbd0d5;
 }
+.atk-swatch-gray .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #eff1f2;
+}
 .atk-swatch-gray[class*=icon] {
   background: none;
   color: #f5f6f7;
@@ -4177,6 +4198,9 @@ a.atk-swatch-gray-text:hover {
 .atk-swatch-blue .ui-widget-content .ui-state-default:hover {
   background-color: #0089eb;
   border-color: #0065ad;
+}
+.atk-swatch-blue.atk-button[data-button*=blank] {
+  color: #0095ff !important;
 }
 .atk-swatch-blue[data-border*=outline],
 .atk-swatch-blue[data-border*=outline][class*=atk-button] {
@@ -4240,6 +4264,9 @@ a.atk-swatch-blue:not([class*=atk-button]):hover {
 .atk-swatch-blue hr[data-border*=overlay] {
   border-color: #0068b3;
 }
+.atk-swatch-blue .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #008ff5;
+}
 .atk-swatch-blue[class*=icon] {
   background: none;
   color: #0095ff;
@@ -4277,6 +4304,9 @@ a.atk-swatch-blue-text:hover {
 .atk-swatch-red .ui-widget-content .ui-state-default:hover {
   background-color: #f8350b;
   border-color: #c12605;
+}
+.atk-swatch-red.atk-button[data-button*=blank] {
+  color: #f9451f !important;
 }
 .atk-swatch-red[data-border*=outline],
 .atk-swatch-red[data-border*=outline][class*=atk-button] {
@@ -4340,6 +4370,9 @@ a.atk-swatch-red:not([class*=atk-button]):hover {
 .atk-swatch-red hr[data-border*=overlay] {
   border-color: #c62705;
 }
+.atk-swatch-red .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #f93d15;
+}
 .atk-swatch-red[class*=icon] {
   background: none;
   color: #f9451f;
@@ -4377,6 +4410,9 @@ a.atk-swatch-red-text:hover {
 .atk-swatch-green .ui-widget-content .ui-state-default:hover {
   background-color: #00b85c;
   border-color: #007a3d;
+}
+.atk-swatch-green.atk-button[data-button*=blank] {
+  color: #00cc66 !important;
 }
 .atk-swatch-green[data-border*=outline],
 .atk-swatch-green[data-border*=outline][class*=atk-button] {
@@ -4440,6 +4476,9 @@ a.atk-swatch-green:not([class*=atk-button]):hover {
 .atk-swatch-green hr[data-border*=overlay] {
   border-color: #008040;
 }
+.atk-swatch-green .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #00c261;
+}
 .atk-swatch-green[class*=icon] {
   background: none;
   color: #00cc66;
@@ -4477,6 +4516,9 @@ a.atk-swatch-green-text:hover {
 .atk-swatch-yellow .ui-widget-content .ui-state-default:hover {
   background-color: #ebbc00;
   border-color: #ad8b00;
+}
+.atk-swatch-yellow.atk-button[data-button*=blank] {
+  color: #ffcc00 !important;
 }
 .atk-swatch-yellow[data-border*=outline],
 .atk-swatch-yellow[data-border*=outline][class*=atk-button] {
@@ -4539,6 +4581,9 @@ a.atk-swatch-yellow:not([class*=atk-button]):hover {
 .atk-swatch-yellow[data-border*=overlay],
 .atk-swatch-yellow hr[data-border*=overlay] {
   border-color: #b38f00;
+}
+.atk-swatch-yellow .atk-table[data-table*=hover] table tbody tr:hover td {
+  background: #f5c400;
 }
 .atk-swatch-yellow[class*=icon] {
   background: none;
